Robotics/log/build_2024-08-18_13-41-50/realpkg/stderr.log
  File "/home/kiro/Robotics/install/realpkg/lib/python3.12/site-packages/realpkg/testnode.py", line 15
    self.get_logger().info("Call #"  str(self.counter_))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

